   - spark.cassandra.connection.(rpc|native).port replaced with spark.cassandra.connection.port
 * Refactored ColumnSelector to avoid circular dependency on TableDef (SPARKC-177)
 * Support for modifying C* Collections using saveToCassandra (SPARKC-147)
 * Add the abilty to use Custom Mappers with repartitionByCassandraReplica (SPARKC-104)



1.3.0 M1
 * Removed use of Thrift describe_ring and replaced it with native Java Driver
   support for fetching TokenRanges (SPARKC-93)
 * Support for converting Cassandra UDT column values to Scala case-class objects (SPARKC-4)
   - Introduced a common interface for TableDef and UserDefinedType
   - Removed ClassTag from ColumnMapper
   - Removed by-index column references and replaced them with by-name ColumnRefs
   - Created a GettableDataToMappedTypeConverter that can handle UDTs
   - ClassBasedRowReader delegates object conversion instead of doing it by itself;
     this improves unit-testability of code
 * Decoupled PredicatePushDown logic from Spark (SPARKC-166)
   - added support for Filter and Expression predicates
   - improved code testability and added unit-tests
 * Basic Datasource API integration and keyspace/cluster level settings (SPARKC-112, SPARKC-162)
 * Added support to use aliases with Tuples (SPARKC-125)
********************************************************************************

********************************************************************************

1.2.3 (unreleased)
 * Support for connection compressions configuration (SPARKC-124)
 * Support for connection encryption configuration (SPARKC-118)

1.2.2
 * Updated Spark version to 1.2.2, Scala to 2.10.5 / 2.11.6
 * Enabled Java API artifact generation for Scala 2.11.x (SPARKC-130)
 * Fixed a bug preventing a custom type converter from being used
   when saving data. RowWriter implementations must
   perform type conversions now. (SPARKC-157)

1.2.1
 * Fixed problems with mixed case keyspaces in ReplicaMapper (SPARKC-159)

1.2.0