@@ -10,7 +10,8 @@
  * Refactored ColumnSelector to avoid circular dependency on TableDef (SPARKC-177)
  * Support for modifying C* Collections using saveToCassandra (SPARKC-147)
  * Add the abilty to use Custom Mappers with repartitionByCassandraReplica (SPARKC-104)
-
+ * Removed CassandraRelation by CassandraSourceRelation and Added cache to
+   CassandraCatalog (SPARKC-163)
 
 
 1.3.0 M1
